<resources>
    <string name="app_name">Book Lover</string>
    <string-array name="languages">
        <item name="auto">Auto</item>
        <item name="en">English</item>
        <item name="it">Кыргызча</item>
        <item name="in">Uzbek</item>
        <item name="ru">Русский</item>
    </string-array>
    <string-array name="languages_values">
        <item name="auto">auto</item>
        <item name="en">en</item>
        <item name="it">ky</item>
        <item name="in">uz</item>
        <item name="ru">ru</item>
    </string-array>
    <string name="fix">Fix</string>
    <string name="saved_books">Saved Books</string>
    <string name="criminal">Criminal</string>
    <string name="secular">Secular</string>
    <string name="historical">Historical</string>
    <string name="science_fiction">Science fiction</string>
    <string name="fantasy">Fantasy</string>
    <string name="adventures">Adventures</string>
    <string name="historical_novel">Historical novel</string>
    <string name="a_love_affair">A love affair</string>
    <string name="adventure_novel">Adventure novel</string>
    <string name="scientific_works">Scientific works</string>
    <string name="articles">Articles</string>
    <string name="epic">Epic</string>
    <string name="legends">Legends</string>
    <string name="fairy_tales">Fairy tales</string>
    <string name="jokes">Jokes</string>
    <string name="poetry">Poetry</string>
    <string name="prose">Prose</string>
    <string name="childrens_book">Children\'s book</string>
    <string name="biography">Biography</string>
    <string name="journalism">Journalism</string>
    <string name="military_affairs">Military affairs</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="finance">Finance</string>
    <string name="economy">Economy</string>
    <string name="religious_literature">Religious literature</string>
    <string name="methodical_manual">Methodical manual</string>
    <string name="textbook">Textbook</string>
    <string name="psychology">Psychology</string>
    <string name="hobby">Hobby</string>
    <string name="foreign_literature">Foreign literature</string>
    <string name="russian_literature">Russian literature</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="Auto">Auto</string>
    <string name="choose_language">Select a language</string>
    <string name="Uzbek">Uzbek tili</string>
    <string name="Kyrgyz">Кыргыз тили</string>
    <string name="Magyar">Magyar</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english">English</string>
    <string name="settings_language">Languages</string>
    <string name="title_activity_main_student">title_activity_main_student</string>
    <string name="loading_please_wait">Loading, please wait.</string>
    <string name="loading_books">Loading all the books…</string>
    <string name="loading_my_books">Loading your books…</string>
    <string name="loading_my_student_books">Loading the students books…</string>
    <string name="loading_my_students">Looking for your students…</string>
    <string name="loading_chapters">Loading chapters…</string>
    <string name="loading_book">Preparing for reading…</string>
    <string name="name_input_format_error">Invalid name input format!</string>
    <string name="last_name_input_format_error">Incorrect format for entering the last name!</string>
    <string name="email_input_format_error">Invalid email input format!</string>
    <string name="password_input_format_error">Incorrect password input format!</string>
    <string name="phone_input_format_error">Invalid format for entering a phone number!</string>
    <string name="invalid_password_error">Invalid password!</string>
    <string name="answer_is_error">You answered the question incorrectly!</string>
    <string name="network_error">There is no internet connection.</string>
    <string name="book_is_not_ready">The book is not ready to read yet.</string>
    <string name="generic_error">Something went wrong.</string>
    <string name="service_unavailable">Server Error.</string>
    <string name="try_again">Try again</string>
    <string name="profile_has_been_successfully_updated">Your profile has been successfully updated!</string>
    <string name="book_success_added">The book has been added successfully!</string>
    <string name="answer_is_success">You have successfully answered the question!</string>
    <string name="survey_is_success">You have successfully completed the survey!</string>
    <string name="choose_class">Choose your class</string>
    <string name="choose_school">Choose your school</string>
    <string name="book_added_successfully">The book has been added successfully.</string>
    <string name="no_book_questions">There are no questions about the chapter.</string>
    <string name="book_question_updated_successfully">The question has been successfully updated</string>
    <string name="enter_the_change">First enter the change</string>
    <string name="book_question_added_successfully">The question was successfully added</string>
    <string name="book_question_deleted_successfully">The question was successfully deleted</string>
    <string name="class_deleted_successfully">The class was successfully deleted</string>
    <string name="fill_in_all_fields">First fill in all the fields</string>
    <string name="admin">Administrator</string>
    <string name="all_books">All books</string>
    <string name="admin_books">Books</string>
    <string name="admin_classes">Classes</string>
    <string name="my_books">My Books</string>
    <string name="my_students">My students</string>
    <string name="hello_blank_fragment">Hello world</string>
    <string name="my_profile">My Profile</string>
    <string name="knigolyub">Book Lover</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="signIn">Entrance</string>
    <string name="enter">Enter</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="no_account">Not registered yet?</string>
    <string name="signUp">Registration</string>
    <string name="already_have_account">Already registered?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="your_position">Specify your status</string>
    <string name="student_signUp">Student Registration</string>
    <string name="last_name">Surname</string>
    <string name="first_name">Name</string>
    <string name="grade">Class</string>
    <string name="grade_letter">Letter</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_gender">Your gender</string>
    <string name="your_number">Your phone number</string>
    <string name="teacher_sighUp">Teacher Registration</string>
    <string name="next">Next</string>
    <string name="books">Books</string>
    <string name="progress">Progress</string>
    <string name="account">Profile</string>
    <string name="settings">Settings</string>
    <string name="one_page_on_screen">One page per screen</string>
    <string name="night_mode">Night mode</string>
    <string name="light_mode">Light mode</string>
    <string name="fullscreen">Full-screen view</string>
    <string name="help">Help</string>
    <string name="about_document">About the document</string>
    <string name="splash_screen_txt">«Those who read books will always control those who watch TV».</string>
    <string name="splash_screen_name">Bill Gates</string>
    <string name="student_edit_profile_name_title">Name</string>
    <string name="student_edit_profile_last_name_title">Surname</string>
    <string name="student_edit_profile_email_title">Email</string>
    <string name="student_edit_profile_save_btn">Save</string>
    <string name="student_edit_profile_confirm_password_title">Confirm Password</string>
    <string name="student_edit_profile_number_title">Number</string>
    <string name="student_edit_profile_password_title">Password</string>
    <string name="image_edit">Edit Photo</string>
    <string name="student_edit_profile_confirm_password_btn">Confirm</string>
    <string name="student_edit_profile_confirm_password_hint">Enter your password</string>
    <string name="student_book_detals_book_title">Title</string>
    <string name="student_book_details_book_title">Author(s)</string>
    <string name="student_book_details_book_public_year">Year of publication</string>
    <string name="student_book_details_book_page_count">Pages:</string>
    <string name="student_book_details_book_chapters">Number of chapters:</string>
    <string name="student_book_details_book_add_my_books">Add to my Books</string>
    <string name="student_book_details_book_read">Read</string>
    <string name="student_book_question_button">To answer</string>
    <string name="student_progress_reads_from">Reads from:</string>
    <string name="progress_statistics">Your statistics</string>
    <string name="student_progress_chapters_read">chapters read</string>
    <string name="student_progress_books_read">books read</string>
    <string name="student_progress_pages_read">pages read</string>
    <string name="book_details_pages_read">Pages read:</string>
    <string name="book_details_chapters_read">Chapters read:</string>
    <string name="default_alert_title">Remove</string>
    <string name="default_delete_alert_message">Do you really want to delete the book?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ignore">Cancel</string>
    <string name="cancle_delete">You canceled the deletion</string>
    <string name="action_confirm">Confirm</string>
    <string name="volume_school_setup">Choose a school</string>
    <string name="class_setup">Select a class</string>
    <string name="to_change">To change</string>
    <string name="default_login_out_alert_message">Do you really want to log out of your account?</string>
    <string name="login_out_title">Go out</string>
    <string name="progress_class_statistics">Class Statistics</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="send_you_a_message">* We will send you a message to set or reset your new password</string>
    <string name="send_code">Send the code</string>
    <string name="message_has_been_successfully">The message has been successfully sent to your email address.</string>
    <string name="upload_book">Add a book</string>
    <string name="add_question">Add a question</string>
    <string name="click_add_question">Click to upload a question</string>
    <string name="right_answer">Choose the correct answer</string>
    <string name="response_options">Answer option</string>
    <string name="question_dilaog_title">Enter the answer</string>
    <string name="empty_value">Empty</string>
    <string name="question_text">Question text (no more than 200 characters)</string>
    <string name="default_delete_question_alert_message">Do you really want to delete this question?</string>
    <string name="default_delete_class_alert_message">Do you really want to delete this class?</string>
    <string name="bookTitle">Title</string>
    <string name="bookAutor">Author</string>
    <string name="delete">Remove</string>
    <string name="admin_sighUp">Admin regestration</string>
    <string name="cancel">Cancel</string>
    <string name="save_book">Save book</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_author">Enter author</string>
    <string name="date_of_publication">Date of publication</string>
    <string name="enter_date">Enter date</string>
</resources>