<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentAdminMainRoot"
        android:checked="true"
        android:icon="@drawable/ic_book"
        android:title="@string/books" />
    <item
        android:id="@+id/fragmentSchoolProgress"
        android:icon="@drawable/ic_progress"
        android:title="@string/progress" />
    <item
        android:id="@+id/fragmentAdminUploadPdf"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/upload_book" />
    <item
        android:id="@+id/fragmentAdminProfile"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/fragmentSetting"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>