<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    android:orientation="vertical"
    tools:context=".app.ui.general_screens.screen_edit_book.FragmentEditBook">

    <include
        android:id="@+id/toolbar_block"
        layout="@layout/toolbar_block" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/genre_background_first" />

        <View
            android:id="@+id/outline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_item_outline_4dp" />


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|right"
            android:src="@drawable/image_edit_icon" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/bookTitle"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/description"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/bookAutor"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enter_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_author" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/date_of_publication"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        style="@style/ButtonStyle.Blue.AppStyle"
        android:layout_marginTop="24dp"
        android:text="@string/save_book" />
</LinearLayout>