<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.general_screens.screen_sign_up.FragmentSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStylesLogin"
            android:title="@string/teacher_sighUp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_field_box"
            style="@style/EditTextStyleInputLayoutLoginStyle"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_field"
                style="@style/EditTextStyleInputLoginStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_field_box"
            style="@style/EditTextStyleInputLayoutLoginStyle"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_field"
                style="@style/EditTextStyleInputLoginStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field_box"
            style="@style/EditTextStyleInputLayoutLoginStyle"
            android:hint="@string/your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                style="@style/EditTextStyleInputLoginStyle"
                android:inputType="textEmailSubject" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field_box"
            style="@style/EditTextStyleInputLayoutLoginStyle"
            android:hint="@string/your_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                style="@style/EditTextStyleInputLoginStyle"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            style="@style/EditTextStyleInputLayoutLoginStyle"
            android:hint="@string/your_number">

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/phoneField"
                style="@style/EditTextStyleInputLoginStyle"
                android:inputType="phone"
                app:met_mask="+996 (###) ## ## ##" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/your_gender_block"
            layout="@layout/block_your_gender" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_marginTop="24dp"
            style="@style/ButtonStyle.Blue.AppStyle"
            android:text="@string/signUp" />

        <include
            android:id="@+id/already_registered_block"
            layout="@layout/block_already_registered" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>