<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.ui.general_screens.screen_sign_up.FragmentSelectSignUp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="?attr/blackOrWhiteColor"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="24dp"
            android:src="@drawable/setting_icon" />
    </FrameLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/book" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/your_position"
        android:textColor="?attr/blackOrWhiteColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/teacher_btn"
        style="@style/ButtonStyle.Blue.AppStyle"
        android:text="@string/teacher" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/student_btn"
        style="@style/ButtonStyle.Blue.AppStyle"
        android:text="@string/student" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admin_btn"
        style="@style/ButtonStyle.Blue.AppStyle"
        android:text="@string/admin" />

    <include
        android:id="@+id/already_registered_block"
        layout="@layout/block_already_registered" />

</LinearLayout>