<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.ui.general_screens.screen_forgot_password.FragmentForgotPassword">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStylesLogin"
        android:title="@string/forgot_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field_box"
        style="@style/EditTextStyleInputLayoutLoginStyle"
        android:hint="@string/your_email"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            style="@style/EditTextStyleInputLoginStyle"
            android:inputType="textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/send_you_a_message"
        android:textColor="?attr/text_secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/send_code"
            android:textColor="?attr/blackOrWhiteColor"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

    </LinearLayout>


</LinearLayout>